# debian-cloud-init

./: .gitignore  README.md  cloud-init-generator.py  cloud-init.yml  generator.py  pyproject.toml  requirements.txt  session.py  tests.md  utils.py
.github/workflows/: ci.yaml
debian_cloud_init/: cloud_init.py  generator.py  proxmox.py  proxmox_generator.py  proxmox_session.py  session.py  ui.py  vm.py
old-version/: update-cloud-init.py
rec/: rec.md
templates/: amd64-tools.sh  cloud-init-template.yml  package-config.txt  system-config.txt
tests/: test_cloud_init.py  test_proxmox.py  test_proxmox_session.py  test_session.py  test_ui.py  test_utils.py  test_vm.py
